MAYBE fix the dockerfile