@@ -3,7 +3,7 @@ FROM gradle:7.2.0-jdk11 AS build
 WORKDIR /home/gradle/src
 COPY --chown=gradle:gradle . .
 
-RUN gradle installDist
+RUN gradle installDist --no-daemon
 
 FROM openjdk:17-jdk
 
@@ -12,4 +12,4 @@ VOLUME /var/data
 
 COPY --from=build /home/gradle/src/build/install/DevDenBot /app
 
-ENTRYPOINT ["JAVA_OPTS='--add-exports java.desktop/sun.font=ALL-UNNAMED' /app/bin/DevDenBot"]
+ENTRYPOINT ["/app/bin/DevDenBot"]
